--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,22 @@
 ---
 layout: default
 ---
-{% include JB/setup %}
-{% include themes/twitter/post.html %}
+<div class="post">
+
+  <header class="post-header">
+    <h1 class="post-title">
+      <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+    </h1>
+    <p class="post-meta">
+      {{ page.date | date: "%b %-d, %Y" }}
+      {% if page.author %} • by <span class="author"><a href="https://twitter.com/{{ site.twitter_username }}">{{ page.author }}</a></span>{% endif %}
+      {% if page.meta %} • {{ page.meta }}{% endif %}
+      {% if page.tags %} • tags: <i>{{ page.tags | join: ', ' }}</i>{% endif %}
+    </p>
+  </header>
+
+  <article class="post-content">
+    {{ content }}
+  </article>
+
+</div>
