--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,3 +1,10 @@
+$base-font-family: 'Lato', sans-serif;
+$code-font-family: Monaco, Consolas, 'Courier New', monospace;
+$base-line-height: 1.5;
+$text-color: #404040;
+$brand-color: #5d6d7e;
+$spacing-unit: 40px;
+
 /**
  * Reset some basic elements
  */
@@ -17,10 +24,11 @@ body {
     font-family: $base-font-family;
     font-size: $base-font-size;
     line-height: $base-line-height;
-    font-weight: 300;
+    font-weight: 400;
     color: $text-color;
     background-color: $background-color;
     -webkit-text-size-adjust: 100%;
+    -webkit-font-smoothing: antialiased;
 }
 
 /**
@@ -79,7 +87,7 @@ li {
  */
  h1, h2, h3, h4, h5, h6 {
     color: $brand-color;
-    font-weight: 600;
+    font-weight: 400;
  }
 
 
@@ -126,9 +134,6 @@ pre,
 code {
     font-family: $code-font-family;
     font-size: $code-font-size;
-    border: 1px solid $grey-color-light;
-    border-radius: 3px;
-    background-color: #eee;
 }
 
 @include media-query($on-palm) {
@@ -170,8 +175,8 @@ pre {
     @include media-query($on-laptop) {
         max-width: -webkit-calc(800px - (#{$spacing-unit}));
         max-width:         calc(800px - (#{$spacing-unit}));
-        padding-right: $spacing-unit / 2;
-        padding-left: $spacing-unit / 2;
+        padding-right: $spacing-unit / 1.5;
+        padding-left: $spacing-unit / 1.5;
     }
 }
 
