--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,8 +2,8 @@
  * Site header
  */
 .site-header {
-    border-top: 6px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
+    border-top: 6px solid #5d6d7e;
+    border-bottom: 1px solid lighten(#5d6d7e, 15%);
     min-height: 56px;
 
     // Positioning context for the mobile navigation icon
@@ -13,7 +13,6 @@
 .site-title {
     font-size: 26px;
     line-height: 56px;
-    letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
 
@@ -211,12 +210,12 @@
 }
 
 .post-title {
-    font-size: 36px;
+    font-size: 28px;
     letter-spacing: -1px;
     line-height: 1;
 
     @include media-query($on-laptop) {
-        font-size: 36px;
+        font-size: 28px;
     }
 }
 
@@ -224,26 +223,26 @@
     margin-bottom: $spacing-unit;
 
     h2 {
-        font-size: 32px;
+        font-size: 24px;
 
         @include media-query($on-laptop) {
-            font-size: 28px;
+            font-size: 24px;
         }
     }
 
     h3 {
-        font-size: 26px;
+        font-size: 18px;
 
         @include media-query($on-laptop) {
-            font-size: 22px;
+            font-size: 18px;
         }
     }
 
     h4 {
-        font-size: 20px;
+        font-size: 16px;
 
         @include media-query($on-laptop) {
-            font-size: 18px;
+            font-size: 16px;
         }
     }
 }
