Change link color

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -2,7 +2,7 @@ $base-font-family: 'Lato', sans-serif;
 $code-font-family: Monaco, Consolas, 'Courier New', monospace;
 $base-line-height: 1.5;
 $text-color: #404040;
-$brand-color: #5d6d7e;
+$brand-color: #ff4441;
 $spacing-unit: 40px;
 
 /**
